codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__image_placeholder_multiple.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
"› [Image #1][Image #2]                                                                              "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                               codexAW (0.101.0) 100% context left  "
